Fix background / contrast background default managing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,5 @@
-.app-container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh; /* Toute la hauteur de la fenêtre */
-}
-
-.content {
-  flex: 1; /* Prend tout l’espace restant */
-  display: flex;
-  flex-direction: column;
+:host {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* Toute la hauteur de la fenêtre */
 }
